stenc.output
Terminals unused in grammar

   VOID_TYPE
   COMMENT
   DO


Grammar

    0 $accept: s $end

    1 s: program

    2 program: INT_TYPE MAIN '(' ')' '{' statement_list '}'

    3 statement_list: statement statement_list
    4               | %empty

    5 statement: assignement ';'
    6          | declaration ';'
    7          | PRINTI '(' variable ')' ';'
    8          | PRINTF '(' STRING ')' ';'
    9          | IF '(' boolean_expression ')' '{' statement_list '}'
   10          | IF '(' boolean_expression ')' '{' statement_list '}' ELSE '{' statement_list '}'
   11          | WHILE '(' boolean_expression ')' '{' statement_list '}'
   12          | FOR '(' assignement ';' boolean_expression ';' expression ')' '{' statement_list '}'
   13          | RETURN INTEGER ';'

   14 assignement: variable ASSIGN expression
   15            | variable ASSIGN assignement

   16 variable: ID
   17         | array ']'

   18 array: ID '[' expression
   19      | array ']' '[' expression

   20 declaration: INT_TYPE ID
   21            | INT_TYPE ID ASSIGN expression
   22            | INT_TYPE array ']'
   23            | INT_TYPE array ']' ASSIGN '{' int_list '}'

   24 int_list: expression
   25         | int_list ',' expression

   26 boolean_expression: boolean_expression LOG_OR boolean_expression
   27                   | boolean_expression LOG_AND boolean_expression
   28                   | expression relop expression
   29                   | expression LOG_EQ expression
   30                   | expression NE expression
   31                   | NOT boolean_expression
   32                   | '(' boolean_expression ')'
   33                   | expression

   34 relop: GT
   35      | LT
   36      | LE
   37      | GE

   38 expression: '-' expression
   39           | expression '+' expression
   40           | expression '-' expression
   41           | expression '/' expression
   42           | expression '*' expression
   43           | ID INCR
   44           | ID DECR
   45           | variable
   46           | INTEGER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 2 7 8 9 10 11 12 32
')' (41) 2 7 8 9 10 11 12 32
'*' (42) 42
'+' (43) 39
',' (44) 25
'-' (45) 38 40
'/' (47) 41
';' (59) 5 6 7 8 12 13
'[' (91) 18 19
']' (93) 17 19 22 23
'{' (123) 2 9 10 11 12 23
'}' (125) 2 9 10 11 12 23
error (256)
ID (258) 16 18 20 21 43 44
INT_TYPE (259) 2 20 21 22 23
VOID_TYPE (260)
COMMENT (261)
INTEGER (262) 13 46
PRINTI (263) 7
PRINTF (264) 8
STRING (265) 8
MAIN (266) 2
RETURN (267) 13
IF (268) 9 10
ELSE (269) 10
WHILE (270) 11
DO (271)
FOR (272) 12
INCR (273) 43
DECR (274) 44
LOG_AND (275) 27
LOG_OR (276) 26
LOG_EQ (277) 29
GE (278) 37
LE (279) 36
NE (280) 30
GT (281) 34
LT (282) 35
NOT (283) 31
ASSIGN (284) 14 15 21 23


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
s (43)
    on left: 1, on right: 0
program (44)
    on left: 2, on right: 1
statement_list (45)
    on left: 3 4, on right: 2 3 9 10 11 12
statement (46)
    on left: 5 6 7 8 9 10 11 12 13, on right: 3
assignement (47)
    on left: 14 15, on right: 5 12 15
variable (48)
    on left: 16 17, on right: 7 14 15 45
array (49)
    on left: 18 19, on right: 17 19 22 23
declaration (50)
    on left: 20 21 22 23, on right: 6
int_list (51)
    on left: 24 25, on right: 23 25
boolean_expression (52)
    on left: 26 27 28 29 30 31 32 33, on right: 9 10 11 12 26 27 31
    32
relop (53)
    on left: 34 35 36 37, on right: 28
expression (54)
    on left: 38 39 40 41 42 43 44 45 46, on right: 12 14 18 19 21 24
    25 28 29 30 33 38 39 40 41 42


State 0

    0 $accept: . s $end

    INT_TYPE  shift, and go to state 1

    s        go to state 2
    program  go to state 3


State 1

    2 program: INT_TYPE . MAIN '(' ')' '{' statement_list '}'

    MAIN  shift, and go to state 4


State 2

    0 $accept: s . $end

    $end  shift, and go to state 5


State 3

    1 s: program .

    $default  reduce using rule 1 (s)


State 4

    2 program: INT_TYPE MAIN . '(' ')' '{' statement_list '}'

    '('  shift, and go to state 6


State 5

    0 $accept: s $end .

    $default  accept


State 6

    2 program: INT_TYPE MAIN '(' . ')' '{' statement_list '}'

    ')'  shift, and go to state 7


State 7

    2 program: INT_TYPE MAIN '(' ')' . '{' statement_list '}'

    '{'  shift, and go to state 8


State 8

    2 program: INT_TYPE MAIN '(' ')' '{' . statement_list '}'

    ID        shift, and go to state 9
    INT_TYPE  shift, and go to state 10
    PRINTI    shift, and go to state 11
    PRINTF    shift, and go to state 12
    RETURN    shift, and go to state 13
    IF        shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 17
    statement       go to state 18
    assignement     go to state 19
    variable        go to state 20
    array           go to state 21
    declaration     go to state 22


State 9

   16 variable: ID .
   18 array: ID . '[' expression

    '['  shift, and go to state 23

    $default  reduce using rule 16 (variable)


State 10

   20 declaration: INT_TYPE . ID
   21            | INT_TYPE . ID ASSIGN expression
   22            | INT_TYPE . array ']'
   23            | INT_TYPE . array ']' ASSIGN '{' int_list '}'

    ID  shift, and go to state 24

    array  go to state 25


State 11

    7 statement: PRINTI . '(' variable ')' ';'

    '('  shift, and go to state 26


State 12

    8 statement: PRINTF . '(' STRING ')' ';'

    '('  shift, and go to state 27


State 13

   13 statement: RETURN . INTEGER ';'

    INTEGER  shift, and go to state 28


State 14

    9 statement: IF . '(' boolean_expression ')' '{' statement_list '}'
   10          | IF . '(' boolean_expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    '('  shift, and go to state 29


State 15

   11 statement: WHILE . '(' boolean_expression ')' '{' statement_list '}'

    '('  shift, and go to state 30


State 16

   12 statement: FOR . '(' assignement ';' boolean_expression ';' expression ')' '{' statement_list '}'

    '('  shift, and go to state 31


State 17

    2 program: INT_TYPE MAIN '(' ')' '{' statement_list . '}'

    '}'  shift, and go to state 32


State 18

    3 statement_list: statement . statement_list

    ID        shift, and go to state 9
    INT_TYPE  shift, and go to state 10
    PRINTI    shift, and go to state 11
    PRINTF    shift, and go to state 12
    RETURN    shift, and go to state 13
    IF        shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 33
    statement       go to state 18
    assignement     go to state 19
    variable        go to state 20
    array           go to state 21
    declaration     go to state 22


State 19

    5 statement: assignement . ';'

    ';'  shift, and go to state 34


State 20

   14 assignement: variable . ASSIGN expression
   15            | variable . ASSIGN assignement

    ASSIGN  shift, and go to state 35


State 21

   17 variable: array . ']'
   19 array: array . ']' '[' expression

    ']'  shift, and go to state 36


State 22

    6 statement: declaration . ';'

    ';'  shift, and go to state 37


State 23

   18 array: ID '[' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 42


State 24

   18 array: ID . '[' expression
   20 declaration: INT_TYPE ID .
   21            | INT_TYPE ID . ASSIGN expression

    ASSIGN  shift, and go to state 43
    '['     shift, and go to state 23

    $default  reduce using rule 20 (declaration)


State 25

   19 array: array . ']' '[' expression
   22 declaration: INT_TYPE array . ']'
   23            | INT_TYPE array . ']' ASSIGN '{' int_list '}'

    ']'  shift, and go to state 44


State 26

    7 statement: PRINTI '(' . variable ')' ';'

    ID  shift, and go to state 9

    variable  go to state 45
    array     go to state 21


State 27

    8 statement: PRINTF '(' . STRING ')' ';'

    STRING  shift, and go to state 46


State 28

   13 statement: RETURN INTEGER . ';'

    ';'  shift, and go to state 47


State 29

    9 statement: IF '(' . boolean_expression ')' '{' statement_list '}'
   10          | IF '(' . boolean_expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 50
    expression          go to state 51


State 30

   11 statement: WHILE '(' . boolean_expression ')' '{' statement_list '}'

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 52
    expression          go to state 51


State 31

   12 statement: FOR '(' . assignement ';' boolean_expression ';' expression ')' '{' statement_list '}'

    ID  shift, and go to state 9

    assignement  go to state 53
    variable     go to state 20
    array        go to state 21


State 32

    2 program: INT_TYPE MAIN '(' ')' '{' statement_list '}' .

    $default  reduce using rule 2 (program)


State 33

    3 statement_list: statement statement_list .

    $default  reduce using rule 3 (statement_list)


State 34

    5 statement: assignement ';' .

    $default  reduce using rule 5 (statement)


State 35

   14 assignement: variable ASSIGN . expression
   15            | variable ASSIGN . assignement

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    assignement  go to state 54
    variable     go to state 55
    array        go to state 21
    expression   go to state 56


State 36

   17 variable: array ']' .
   19 array: array ']' . '[' expression

    '['  shift, and go to state 57

    $default  reduce using rule 17 (variable)


State 37

    6 statement: declaration ';' .

    $default  reduce using rule 6 (statement)


State 38

   16 variable: ID .
   18 array: ID . '[' expression
   43 expression: ID . INCR
   44           | ID . DECR

    INCR  shift, and go to state 58
    DECR  shift, and go to state 59
    '['   shift, and go to state 23

    $default  reduce using rule 16 (variable)


State 39

   46 expression: INTEGER .

    $default  reduce using rule 46 (expression)


State 40

   38 expression: '-' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 60


State 41

   45 expression: variable .

    $default  reduce using rule 45 (expression)


State 42

   18 array: ID '[' expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 18 (array)


State 43

   21 declaration: INT_TYPE ID ASSIGN . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 65


State 44

   19 array: array ']' . '[' expression
   22 declaration: INT_TYPE array ']' .
   23            | INT_TYPE array ']' . ASSIGN '{' int_list '}'

    ASSIGN  shift, and go to state 66
    '['     shift, and go to state 57

    $default  reduce using rule 22 (declaration)


State 45

    7 statement: PRINTI '(' variable . ')' ';'

    ')'  shift, and go to state 67


State 46

    8 statement: PRINTF '(' STRING . ')' ';'

    ')'  shift, and go to state 68


State 47

   13 statement: RETURN INTEGER ';' .

    $default  reduce using rule 13 (statement)


State 48

   31 boolean_expression: NOT . boolean_expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 69
    expression          go to state 51


State 49

   32 boolean_expression: '(' . boolean_expression ')'

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 70
    expression          go to state 51


State 50

    9 statement: IF '(' boolean_expression . ')' '{' statement_list '}'
   10          | IF '(' boolean_expression . ')' '{' statement_list '}' ELSE '{' statement_list '}'
   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   27                   | boolean_expression . LOG_AND boolean_expression

    LOG_AND  shift, and go to state 71
    LOG_OR   shift, and go to state 72
    ')'      shift, and go to state 73


State 51

   28 boolean_expression: expression . relop expression
   29                   | expression . LOG_EQ expression
   30                   | expression . NE expression
   33                   | expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    LOG_EQ  shift, and go to state 74
    GE      shift, and go to state 75
    LE      shift, and go to state 76
    NE      shift, and go to state 77
    GT      shift, and go to state 78
    LT      shift, and go to state 79
    '+'     shift, and go to state 61
    '-'     shift, and go to state 62
    '*'     shift, and go to state 63
    '/'     shift, and go to state 64

    $default  reduce using rule 33 (boolean_expression)

    relop  go to state 80


State 52

   11 statement: WHILE '(' boolean_expression . ')' '{' statement_list '}'
   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   27                   | boolean_expression . LOG_AND boolean_expression

    LOG_AND  shift, and go to state 71
    LOG_OR   shift, and go to state 72
    ')'      shift, and go to state 81


State 53

   12 statement: FOR '(' assignement . ';' boolean_expression ';' expression ')' '{' statement_list '}'

    ';'  shift, and go to state 82


State 54

   15 assignement: variable ASSIGN assignement .

    $default  reduce using rule 15 (assignement)


State 55

   14 assignement: variable . ASSIGN expression
   15            | variable . ASSIGN assignement
   45 expression: variable .

    ASSIGN  shift, and go to state 35

    $default  reduce using rule 45 (expression)


State 56

   14 assignement: variable ASSIGN expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 14 (assignement)


State 57

   19 array: array ']' '[' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 83


State 58

   43 expression: ID INCR .

    $default  reduce using rule 43 (expression)


State 59

   44 expression: ID DECR .

    $default  reduce using rule 44 (expression)


State 60

   38 expression: '-' expression .
   39           | expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    $default  reduce using rule 38 (expression)


State 61

   39 expression: expression '+' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 84


State 62

   40 expression: expression '-' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 85


State 63

   42 expression: expression '*' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 86


State 64

   41 expression: expression '/' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 87


State 65

   21 declaration: INT_TYPE ID ASSIGN expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 21 (declaration)


State 66

   23 declaration: INT_TYPE array ']' ASSIGN . '{' int_list '}'

    '{'  shift, and go to state 88


State 67

    7 statement: PRINTI '(' variable ')' . ';'

    ';'  shift, and go to state 89


State 68

    8 statement: PRINTF '(' STRING ')' . ';'

    ';'  shift, and go to state 90


State 69

   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   27                   | boolean_expression . LOG_AND boolean_expression
   31                   | NOT boolean_expression .

    $default  reduce using rule 31 (boolean_expression)


State 70

   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   27                   | boolean_expression . LOG_AND boolean_expression
   32                   | '(' boolean_expression . ')'

    LOG_AND  shift, and go to state 71
    LOG_OR   shift, and go to state 72
    ')'      shift, and go to state 91


State 71

   27 boolean_expression: boolean_expression LOG_AND . boolean_expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 92
    expression          go to state 51


State 72

   26 boolean_expression: boolean_expression LOG_OR . boolean_expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 93
    expression          go to state 51


State 73

    9 statement: IF '(' boolean_expression ')' . '{' statement_list '}'
   10          | IF '(' boolean_expression ')' . '{' statement_list '}' ELSE '{' statement_list '}'

    '{'  shift, and go to state 94


State 74

   29 boolean_expression: expression LOG_EQ . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 95


State 75

   37 relop: GE .

    $default  reduce using rule 37 (relop)


State 76

   36 relop: LE .

    $default  reduce using rule 36 (relop)


State 77

   30 boolean_expression: expression NE . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 96


State 78

   34 relop: GT .

    $default  reduce using rule 34 (relop)


State 79

   35 relop: LT .

    $default  reduce using rule 35 (relop)


State 80

   28 boolean_expression: expression relop . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 97


State 81

   11 statement: WHILE '(' boolean_expression ')' . '{' statement_list '}'

    '{'  shift, and go to state 98


State 82

   12 statement: FOR '(' assignement ';' . boolean_expression ';' expression ')' '{' statement_list '}'

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    NOT      shift, and go to state 48
    '-'      shift, and go to state 40
    '('      shift, and go to state 49

    variable            go to state 41
    array               go to state 21
    boolean_expression  go to state 99
    expression          go to state 51


State 83

   19 array: array ']' '[' expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 19 (array)


State 84

   39 expression: expression . '+' expression
   39           | expression '+' expression .
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    $default  reduce using rule 39 (expression)


State 85

   39 expression: expression . '+' expression
   40           | expression . '-' expression
   40           | expression '-' expression .
   41           | expression . '/' expression
   42           | expression . '*' expression

    $default  reduce using rule 40 (expression)


State 86

   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression
   42           | expression '*' expression .

    $default  reduce using rule 42 (expression)


State 87

   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   41           | expression '/' expression .
   42           | expression . '*' expression

    $default  reduce using rule 41 (expression)


State 88

   23 declaration: INT_TYPE array ']' ASSIGN '{' . int_list '}'

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    int_list    go to state 100
    expression  go to state 101


State 89

    7 statement: PRINTI '(' variable ')' ';' .

    $default  reduce using rule 7 (statement)


State 90

    8 statement: PRINTF '(' STRING ')' ';' .

    $default  reduce using rule 8 (statement)


State 91

   32 boolean_expression: '(' boolean_expression ')' .

    $default  reduce using rule 32 (boolean_expression)


State 92

   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   27                   | boolean_expression . LOG_AND boolean_expression
   27                   | boolean_expression LOG_AND boolean_expression .

    $default  reduce using rule 27 (boolean_expression)


State 93

   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   26                   | boolean_expression LOG_OR boolean_expression .
   27                   | boolean_expression . LOG_AND boolean_expression

    $default  reduce using rule 26 (boolean_expression)


State 94

    9 statement: IF '(' boolean_expression ')' '{' . statement_list '}'
   10          | IF '(' boolean_expression ')' '{' . statement_list '}' ELSE '{' statement_list '}'

    ID        shift, and go to state 9
    INT_TYPE  shift, and go to state 10
    PRINTI    shift, and go to state 11
    PRINTF    shift, and go to state 12
    RETURN    shift, and go to state 13
    IF        shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 102
    statement       go to state 18
    assignement     go to state 19
    variable        go to state 20
    array           go to state 21
    declaration     go to state 22


State 95

   29 boolean_expression: expression LOG_EQ expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 29 (boolean_expression)


State 96

   30 boolean_expression: expression NE expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 30 (boolean_expression)


State 97

   28 boolean_expression: expression relop expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 28 (boolean_expression)


State 98

   11 statement: WHILE '(' boolean_expression ')' '{' . statement_list '}'

    ID        shift, and go to state 9
    INT_TYPE  shift, and go to state 10
    PRINTI    shift, and go to state 11
    PRINTF    shift, and go to state 12
    RETURN    shift, and go to state 13
    IF        shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 103
    statement       go to state 18
    assignement     go to state 19
    variable        go to state 20
    array           go to state 21
    declaration     go to state 22


State 99

   12 statement: FOR '(' assignement ';' boolean_expression . ';' expression ')' '{' statement_list '}'
   26 boolean_expression: boolean_expression . LOG_OR boolean_expression
   27                   | boolean_expression . LOG_AND boolean_expression

    LOG_AND  shift, and go to state 71
    LOG_OR   shift, and go to state 72
    ';'      shift, and go to state 104


State 100

   23 declaration: INT_TYPE array ']' ASSIGN '{' int_list . '}'
   25 int_list: int_list . ',' expression

    '}'  shift, and go to state 105
    ','  shift, and go to state 106


State 101

   24 int_list: expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 24 (int_list)


State 102

    9 statement: IF '(' boolean_expression ')' '{' statement_list . '}'
   10          | IF '(' boolean_expression ')' '{' statement_list . '}' ELSE '{' statement_list '}'

    '}'  shift, and go to state 107


State 103

   11 statement: WHILE '(' boolean_expression ')' '{' statement_list . '}'

    '}'  shift, and go to state 108


State 104

   12 statement: FOR '(' assignement ';' boolean_expression ';' . expression ')' '{' statement_list '}'

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 109


State 105

   23 declaration: INT_TYPE array ']' ASSIGN '{' int_list '}' .

    $default  reduce using rule 23 (declaration)


State 106

   25 int_list: int_list ',' . expression

    ID       shift, and go to state 38
    INTEGER  shift, and go to state 39
    '-'      shift, and go to state 40

    variable    go to state 41
    array       go to state 21
    expression  go to state 110


State 107

    9 statement: IF '(' boolean_expression ')' '{' statement_list '}' .
   10          | IF '(' boolean_expression ')' '{' statement_list '}' . ELSE '{' statement_list '}'

    ELSE  shift, and go to state 111

    $default  reduce using rule 9 (statement)


State 108

   11 statement: WHILE '(' boolean_expression ')' '{' statement_list '}' .

    $default  reduce using rule 11 (statement)


State 109

   12 statement: FOR '(' assignement ';' boolean_expression ';' expression . ')' '{' statement_list '}'
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64
    ')'  shift, and go to state 112


State 110

   25 int_list: int_list ',' expression .
   39 expression: expression . '+' expression
   40           | expression . '-' expression
   41           | expression . '/' expression
   42           | expression . '*' expression

    '+'  shift, and go to state 61
    '-'  shift, and go to state 62
    '*'  shift, and go to state 63
    '/'  shift, and go to state 64

    $default  reduce using rule 25 (int_list)


State 111

   10 statement: IF '(' boolean_expression ')' '{' statement_list '}' ELSE . '{' statement_list '}'

    '{'  shift, and go to state 113


State 112

   12 statement: FOR '(' assignement ';' boolean_expression ';' expression ')' . '{' statement_list '}'

    '{'  shift, and go to state 114


State 113

   10 statement: IF '(' boolean_expression ')' '{' statement_list '}' ELSE '{' . statement_list '}'

    ID        shift, and go to state 9
    INT_TYPE  shift, and go to state 10
    PRINTI    shift, and go to state 11
    PRINTF    shift, and go to state 12
    RETURN    shift, and go to state 13
    IF        shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 115
    statement       go to state 18
    assignement     go to state 19
    variable        go to state 20
    array           go to state 21
    declaration     go to state 22


State 114

   12 statement: FOR '(' assignement ';' boolean_expression ';' expression ')' '{' . statement_list '}'

    ID        shift, and go to state 9
    INT_TYPE  shift, and go to state 10
    PRINTI    shift, and go to state 11
    PRINTF    shift, and go to state 12
    RETURN    shift, and go to state 13
    IF        shift, and go to state 14
    WHILE     shift, and go to state 15
    FOR       shift, and go to state 16

    $default  reduce using rule 4 (statement_list)

    statement_list  go to state 116
    statement       go to state 18
    assignement     go to state 19
    variable        go to state 20
    array           go to state 21
    declaration     go to state 22


State 115

   10 statement: IF '(' boolean_expression ')' '{' statement_list '}' ELSE '{' statement_list . '}'

    '}'  shift, and go to state 117


State 116

   12 statement: FOR '(' assignement ';' boolean_expression ';' expression ')' '{' statement_list . '}'

    '}'  shift, and go to state 118


State 117

   10 statement: IF '(' boolean_expression ')' '{' statement_list '}' ELSE '{' statement_list '}' .

    $default  reduce using rule 10 (statement)


State 118

   12 statement: FOR '(' assignement ';' boolean_expression ';' expression ')' '{' statement_list '}' .

    $default  reduce using rule 12 (statement)
